force-app/main/default/objects/Executive_Panel__c/Executive_Panel__c.object-meta.xml
<CustomObject>
    <label>Executive Panel</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Executive Panelists Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>