force-app/main/default/objects/Executive_Panel__c/fields/Accommodation_Booked__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accommodation Booked?</label>
    <type>Checkbox</type>
</CustomField>