force-app/main/default/objects/Executive_Panel__c/fields/Accommodation_Details__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Details__c</fullName>
    <label>Accommodation Details</label>
    <type>TextArea</type>
</CustomField>