force-app/main/default/objects/Executive_Panel__c/fields/Accommodation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Notes__c</fullName>
    <label>Accommodation Notes</label>
    <type>TextArea</type>
</CustomField>