force-app/main/default/objects/Executive_Panel__c/fields/Executive_Panelist__c.field-meta.xml
<CustomField>
    <fullName>Executive_Panelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Panelist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Executive Panels</relationshipLabel>
    <relationshipName>Executive_Panels</relationshipName>
    <type>Lookup</type>
</CustomField>