force-app/main/default/objects/Executive_Panel__c/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <label>Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Executive Panels</relationshipLabel>
    <relationshipName>Executive_Panels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>